--- a/deploy/htdocs/version/src/inc/style/component/block/_block-program-module.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-program-module.scss
@@ -19,6 +19,12 @@
 		cursor: pointer;
 	}
 
+	@include respond-to(MEDIUM) {
+		.program-module-item {
+			width: 50%;
+		}
+	}
+
 	@include respond-to(SMALL) {
 		.program-module-item {
 			width: 100%;
