--- a/deploy/htdocs/version/src/inc/style/component/block/_block-small-info.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-small-info.scss
@@ -20,12 +20,15 @@
 		margin-top: $sizeGrid;
 	}
 
-	// Breakpoints
-	@include respond-to(SMALL) {
+	@include respond-to(MEDIUM) {
 		.site-frame {
 			padding-left: $sizeGrid*2;
 			padding-right: $sizeGrid*2;
 		}
+	}
+
+	// Breakpoints
+	@include respond-to(SMALL) {
 
 		.description,
 		.introduction {
